PROJECT (bow)

SET(SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/bowCV.cpp
)

SET(HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/bowCV.h
)

SET(INCLUDE_DIRS
    .
    ${OpenCV_INCLUDE_DIRS}
)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_LIBRARY(bow STATIC
            ${SOURCE_FILES}
            ${HEADER_FILES}
            )

