PROJECT (SBDCVSource)

SET(SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/SBDCV.cpp
)

SET(HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/SBDCV.h
)

SET(INCLUDE_DIRS
    .
    ${CVAC_INCLUDE_DIR}
    ${OpenCV_INCLUDE_DIRS}
)


INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_LIBRARY(SBDCVSource STATIC
            ${SOURCE_FILES}
            ${HEADER_FILES}
            )

TARGET_LINK_LIBRARIES(SBDCVSource
    )

